--- a/templates/solicitud_cliente.html
+++ b/templates/solicitud_cliente.html
@@ -303,7 +303,7 @@
             <div class="input-grid">
                 <div class="form-group col-8">
                     <label class="form-label">Razón Social / Institución</label>
-                    <input type="text" name="cliente" class="form-control" required placeholder="Ej: Clínica Las Américas">
+                    <input type="text" name="cliente" class="form-control">
                 </div>
                 <div class="form-group col-4">
                     <label class="form-label">NIT</label>
@@ -321,7 +321,7 @@
 
                 <div class="form-group col-4">
                     <label class="form-label">Responsable de Medición</label>
-                    <input type="text" name="responsable_medicion" class="form-control" required placeholder="Quien usa el equipo">
+                    <input type="text" name="responsable_medicion" class="form-control" required placeholder="Quien está midiendo">
                 </div>
                 <div class="form-group col-4">
                     <label class="form-label">Cargo</label>
@@ -346,11 +346,11 @@
             <div class="input-grid">
                 <div class="form-group col-4">
                     <label class="form-label">Marca</label>
-                    <input type="text" name="ref_marca" class="form-control" required placeholder="Ej: RaySafe">
+                    <input type="text" name="ref_marca" class="form-control">
                 </div>
                 <div class="form-group col-4">
                     <label class="form-label">Modelo</label>
-                    <input type="text" name="ref_modelo" class="form-control" required placeholder="Ej: X2">
+                    <input type="text" name="ref_modelo" class="form-control">
                 </div>
                 <div class="form-group col-4">
                     <label class="form-label">Número de Serie</label>
