--- a/templates/solicitud_cliente.html
+++ b/templates/solicitud_cliente.html
@@ -285,10 +285,9 @@
         <div class="logo-container">
             <img src="{{ url_for('static', filename='img/Logo_LCD.png') }}" alt="Sievert LCD Logo">
         </div>
-        <h1 class="hero-title">Solicitud de Servicio Técnico</h1>
+        <h1 class="hero-title">Recomendaciones y mediciones para el despacho de instrumentos</h1>
         <p class="hero-subtitle">
-            Por favor, complete este formulario para registrar sus equipos en nuestro sistema de gestión. 
-            Esta información es vital para garantizar la trazabilidad y calidad de su servicio.
+            Si manejas fuentes radiactivas no selladas, es posible que los instrumentos que vas a enviar a calibración puedan estar contaminados con material radiactivo, por lo cual es importante que se realicen y registren mediciones de contaminación superficial de tus instrumentos, con OTRO instrumento, previo al envío. <p>Este formato debe ser diligenciado SIEMPRE como requisito para la programación de despacho de tus instrumentos.</p> Si vas a enviar un instrumento que requiere detector externo, diligencia <p>SÓLO</p> la información del detector externo.
         </p>
     </div>
 
