--- a/templates/solicitud_cliente.html
+++ b/templates/solicitud_cliente.html
@@ -287,7 +287,7 @@
         </div>
         <h1 class="hero-title">Recomendaciones y mediciones para el despacho de instrumentos</h1>
         <p class="hero-subtitle">
-            Si manejas fuentes radiactivas no selladas, es posible que los instrumentos que vas a enviar a calibración puedan estar contaminados con material radiactivo, por lo cual es importante que se realicen y registren mediciones de contaminación superficial de tus instrumentos, con OTRO instrumento, previo al envío. <p>Este formato debe ser diligenciado SIEMPRE como requisito para la programación de despacho de tus instrumentos.</p> Si vas a enviar un instrumento que requiere detector externo, diligencia <p>SÓLO</p> la información del detector externo.
+            Si manejas fuentes radiactivas no selladas, es posible que los instrumentos que vas a enviar a calibración puedan estar contaminados con material radiactivo, por lo cual es importante que se realicen y registren mediciones de contaminación superficial de tus instrumentos, con OTRO instrumento, previo al envío. Este formato debe ser diligenciado SIEMPRE como requisito para la programación de despacho de tus instrumentos. Si vas a enviar un instrumento que requiere detector externo, diligencia SÓLO la información del detector externo.
         </p>
     </div>
 
